--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -7,23 +7,29 @@ body {
 .card {
   width: 400px;
   background: #fff;
-  margin: 0px auto;
-  padding: 3px 8px;
+  margin: 16px auto;
+  padding: 8px;
+  
+  
+ 
+ 
  
  
 }
 
 .title {
   background: #e3f4ff;
+  margin-top: 0px;
+  margin-bottom: 8px;
   
 
-  margin-bottom: 8px;
- margin-top: 8px;
+ 
+
 }
 
 .content {
   background: #e3f4ff;
- 
+margin-bottom: 8px; 
   
 
 }
@@ -31,16 +37,17 @@ body {
 .button-container {
   background: #e3f4ff;
   
-  margin-top: 8px;
+ 
   text-align: center;
+  padding: 8px;
+
 
 }
 
 button {
-  background: rgb(220, 213, 213);
-  border: 1px solid #eee;
+  background: rgb(255, 255, 255);
   display: block;
- margin-left: 140px;
- padding: 5px 15px;
- margin-bottom: 8px;
+  margin: 0 auto;
+  padding: 8px 16px;
+ 
 }
