--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,10 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
 }
 
 .logo {
@@ -8,12 +12,22 @@
   font-weight: 900;
   color: tomato;
   background: white;
-  padding: 4px 32px;
+  padding: -15px 32px;
+  margin: 10px ;
+  align-self: flex-start;
+
+
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  justify-content: space-evenly;
+  padding-left: 10px;
+  padding-right: 10px;
+  
+  gap: 15px;
 }
 
 a {
@@ -22,4 +36,8 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+  flex: auto;
+  margin-left: auto;
+ 
+  
 }
