--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,16 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display:flex;
+  justify-content: space-between;
+}
+.left{
+display: flex;
+justify-content: flex-start;
+}
+.right{
+display: flex;
+gap: 8px
 }
 
 .profile-image {
@@ -20,6 +30,8 @@ body {
   border-radius: 50%;
   width: 48px;
   height: 48px;
+  align-self: center;
+  margin-right:8px ;
 }
 
 .logo {
@@ -27,6 +39,8 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  margin-left: 8px;
+  
 }
 
 button {
@@ -35,6 +49,7 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+  align-self: center;
 }
 
 a {
@@ -45,4 +60,13 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  justify-content:space-evenly;
+ 
+  padding-left: 0%;
+  margin-left: 12px;
+  gap:14px;
+
+
+  
 }
