--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,9 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  display: flex;
+  flex-direction: column;
+  padding: auto 16px;
+  gap: 32px;
 }
 
 img {
@@ -10,6 +14,8 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  display: flex;
+  justify-content: center;
 }
 
 /* do not edit this footer */
@@ -23,4 +29,20 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+.v{
+  display: flex;
+  flex-direction: column;
+  width: 200px;
+}
+.everything{
+  display: flex;
+  gap: 52px;
+  justify-content: center;
+  
+
+}
+.text{
+  display: flex;
+  flex-wrap: wrap;
 }
