--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,6 +20,8 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  padding: 8px;
 }
 
 .icon {
@@ -31,8 +33,14 @@ body {
   height: 42px;
   border-radius: 50%;
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
+
+  margin-right: 16px;
+  margin-top: 8px;
+  margin-left: 8px;
+  flex-shrink: 0;
+ 
 }
 
 .close-button {
@@ -47,7 +55,11 @@ body {
   align-items: center;
   justify-content: center;
   border: 1px solid #eee;
-  padding: 0;
+ margin-left: 30px;
+ 
+ margin-bottom: 10px;
+
+ 
 }
 
 button {
@@ -66,4 +78,21 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+.enc{
+  display: flex;
+  flex-direction: column;
+}
+.HnX{
+  display: flex;
+  justify-content: space-between;
+}
+.button{
+  display: flex;
+  gap:5px;
+  margin-top: 12px;
+}
+.header{
+font-weight: 900;
+font-size: large;
 }
