--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,12 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+ margin-left: -30px ;
+ 
+ 
 }
 
 img {
@@ -16,6 +22,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 5px 10px;
 }
 
 input {
@@ -24,4 +31,37 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+}
+.header{
+  display: flex;
+  justify-content: space-between;
+  padding-right: 10px;
+
+  
+}
+.footer{
+  display: flex;
+  justify-content: space-between;
+  background-color: #ddd;
+  padding-right: 10px;
+}
+ul{
+  display: flex;
+  list-style-type : none;
+  gap: 12px
+}
+.content{
+  align-self: center;
+}
+.input ,.buttons{
+  display: flex;
+  justify-content: center;
+}
+a{
+  text-decoration: none;
+  color: gray;
+}
+.buttons{
+display:flex ;
+gap: 5px;
 }
