--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,28 +2,75 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+ 
+
 }
+
 
 .header {
-  height: 72px;
+  height: 55px;
   background: darkmagenta;
   color: white;
+  display: flex;
+  justify-content:flex-start;
+  align-items: center;
+  font-size: 32px;
+  font-weight: 900;
+  padding-left: 16px;
 }
-
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  background-color: #e3e3e3;
+  display: flex;
+  align-items: center;
+ justify-content: center;
+
+  
 }
 
 .sidebar {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  flex-shrink: 0;
+  padding:0 16px 16px 0px;
+  margin-right: 10px;
+  
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  max-width: 28%;
+  display: flex;
+  flex-wrap: wrap;
+  
+  
+}
+.cards{
+  display: flex;
+  flex-wrap: wrap;
+   gap: 30px;
+  padding: 32px;
+  
+}
+.middle{
+display: flex;
+flex-grow: 2;
+
+
+}
+a{
+  text-decoration: none;
+  color: white;
+  font-size: 24px;
+}
+li{
+  list-style: none;
 }
